# secretssync

./: .golangci.yml  AGENTS.md  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  RELEASE_NOTES_v1.1.0.md  build_log.txt  docker-compose.test.yml  go.mod  go.sum  pyproject.toml
.cursor/: Dockerfile
.cursor/rules/: 00-architect-autonomy.mdc
.github/: settings.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  claude-code.yml  docs.yml  ollama-pr-review.yml  pr-review.yml
.kiro/: README.md
.kiro/hooks/: docs-consistency.kiro.hook  go-code-quality.kiro.hook  go-security-scanner.kiro.hook
.kiro/specs/secretsync-complete/: design.md  requirements.md
.kiro/steering/: 00-production-release-focus.md  01-golang-standards.md  02-testing-requirements.md
api/v1alpha1/: register.go  vaultsecretsync_types.go
docs/: RENAME_PROPOSAL.md
internal/backend/: state_test.go
internal/config/: config_test.go
internal/notifications/: email_test.go  utils_test.go  webhook_test.go
internal/sync/: clients.go
memory-bank/: activeContext.md
pkg/diff/: diff.go
pkg/pipeline/: aws_context.go  aws_context_test.go  config.go  config_test.go  discovery_helpers.go  discovery_identitycenter.go  discovery_organizations.go  discovery_service.go  inheritance.go  merge.go  pipeline.go  resolver_test.go  s3_store.go  sync.go
pkg/utils/: deepmerge_test.go
python/secretssync/: secretssync.go
stores/aws/: aws.go
stores/gcp/: gcp.go
stores/vault/: vault.go  vault_test.go
tests/integration/: fsc_compatibility_test.go  pipeline_test.go
(+56 files in other folders)
