# Documentation dependencies for SecretSync
# This project is written in Go, but uses Python tools for documentation

[project]
name = "secretsync-docs"
version = "0.0.0"
description = "Documentation dependencies for SecretSync"
requires-python = ">=3.12"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]
